fixed social media icon spacings

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -69,12 +69,12 @@ text-decoration: none;
 
 .navigation-bar:hover .navline1-top{
   position: relative;
-  right: 5%;
+  right: 7%;
 }
 
 .navigation-bar:hover .navline1-bot{
   position: relative;
-  right: 5%;
+  right: 7%;
 }
 
 .navigation-bar:hover .navlinelow-bot{
